Move scroll arrow to left of fixed mail button on mobile

--- a/components/Navbar.module.css
+++ b/components/Navbar.module.css
@@ -216,6 +216,6 @@
   }
 
   .rightArrow {
-    right: 4px;
+    right: 60px; /* Move to left of the Mail button (16px + 30px + padding) */
   }
 }
